--- a/index.html
+++ b/index.html
@@ -4,64 +4,91 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Tuismo</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
-    <div class="container">
+    <div class="cover-image">
+        <h1 class="text-white text-cover text-center mt-3" data-aos="fade-up"><b>¡Turismo en Argentina!</b></h1>
+        <div class="inicio" data-aos="fade-up">
+            <span onclick="slowScrollToContent()">Comenzar</span>
+            <i class='bx bx-chevrons-down icon' class="scroll-button" onclick="slowScrollToContent()"></i>
+        </div>
+    </div>
+    <div class="content">
         <header>
-            <nav class="navbar navbar-expand-lg d-flex">
-                <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container-fluid d-flex justify-content-center">
+                    <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <div class="btn-group">
-                            <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown"
-                                data-bs-display="static" aria-expanded="false">
-                                America
-                            </button>
-                            <ul class="dropdown-menu dropdown-menu-lg-end">
-                                <li><button class="dropdown-item" type="button">Action</button></li>
-                                <li><button class="dropdown-item" type="button">Another action</button></li>
-                                <li><button class="dropdown-item" type="button">Something else here</button></li>
-                            </ul>
-                        </div>
-                        <div class="btn-group">
-                            <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown"
-                                data-bs-display="static" aria-expanded="false">
-                                Europa
-                            </button>
-                            <ul class="dropdown-menu dropdown-menu-lg-end">
-                                <li><button class="dropdown-item" type="button">Action</button></li>
-                                <li><button class="dropdown-item" type="button">Another action</button></li>
-                                <li><button class="dropdown-item" type="button">Something else here</button></li>
-                            </ul>
-                        </div>
-                        <div class="btn-group">
-                            <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown"
-                                data-bs-display="static" aria-expanded="false">
-                                Latinoamerica
-                            </button>
-                            <ul class="dropdown-menu dropdown-menu-lg-end">
-                                <li><button class="dropdown-item" type="button">Action</button></li>
-                                <li><button class="dropdown-item" type="button">Another action</button></li>
-                                <li><button class="dropdown-item" type="button">Something else here</button></li>
-                            </ul>
-                        </div>
+                    </button> -->
+                    <div class="btn-group">
+                        <button type="button" class="btn" data-bs-toggle="dropdown" data-bs-display="static"
+                            aria-expanded="false">
+                            Argentina
+                        </button>
+                    </div>
+                    <div>
+                        <img src="image/logo.jpg" class="rounded-5" width="75px 75px" alt="">
+                    </div>
+                    <div class="btn-group">
+                        <button type="button" class="btn" data-bs-toggle="dropdown" data-bs-display="static"
+                            aria-expanded="false">
+                            Mas Visitados
+                        </button>
                     </div>
                 </div>
             </nav>
         </header>
+
+        <div id="textInit" class="fs-6  m-5">
+            <b>
+                <p class="text-center fs-4">¡Bienvenidos a Argentina, el Corazón de Sudamérica!</p>
+                <p>
+                    <br>
+                    Argentina te invita a descubrir sus paisajes impresionantes, su rica cultura y su vibrante energía.
+                    Desde la majestuosidad de las Cataratas del Iguazú, una de las maravillas naturales del mundo, hasta
+                    la
+                    elegancia cosmopolita de Buenos Aires, una ciudad que nunca duerme, cada rincón de este país te
+                    sorprenderá.
+                    <br>
+                    Explora la vasta y mística Patagonia, hogar de glaciares imponentes y una fauna única. Recorre los
+                    viñedos de Mendoza, donde el Malbec reina y los paisajes andinos te dejarán sin aliento. Vive la
+                    pasión
+                    del tango en las calles porteñas y sumérgete en la historia y tradiciones de las pintorescas
+                    ciudades
+                    del norte, como Salta y Jujuy, con sus coloridos mercados y cerros multicolores.
+                    <br>
+                    En Argentina, cada viaje es una nueva aventura. Desde la serenidad de la Pampa hasta los senderos
+                    desafiantes de la Cordillera de los Andes, cada experiencia está marcada por la calidez y
+                    hospitalidad
+                    de su gente. Ya sea que busques aventuras al aire libre, una inmersión cultural o simplemente
+                    relajarte
+                    en un entorno natural sin igual, Argentina tiene algo para ti.
+                    <br>
+                    ¡Ven y descubre por qué Argentina es un destino incomparable que cautiva a viajeros de todo el
+                    mundo! Tu
+                    próxima gran aventura comienza aquí.
+            </b>
+            </p>
+        </div>
     </div>
+    <footer>
+
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="script.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
 
 </html>
